--- a/tasks/rabbitmq_ha_config.yml
+++ b/tasks/rabbitmq_ha_config.yml
@@ -5,17 +5,5 @@
       vhost: '{{ rabbitmq_vhost_name }}'
       tags: ha-mode=all, ha-sync-mode=automatic
       state: present
-  delegate_to: "{{ groups['rabbitmq'][0] }}"
+  delegate_to: "{{ groups[rabbitmq_group][0] }}"
   run_once: true
-
-#---
-#- name: RabbitMQ | setting up ha on queue(s)
-#  rabbitmq_policy:
-#      name: 'ha-all'
-#      pattern: '.*'
-#      vhost: '{{ vhost_name }}'
-#      tags:
-#          ha-mode: all
-#          ha-sync-mode: automatic
-#      state: present
-#  run_once: true
