--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,28 @@
 rabbitmq_group: rabbitmq
 rabbitmq_plugins:
     - rabbitmq_stomp
-    - rabbitmq_management
+    # - rabbitmq_management
 rabbitmq_vhost_name: defaultvhost
 rabbitmq_mgmt_user: adminuser
 rabbitmq_mgmt_password: adminpass
 rabbitmq_user: rabbitmquser
 rabbitmq_password: rabbitmqpassword
+rabbitmq_linux_user: rabbitmq
+
+# TLS Variables
+rabbitmq_enable_tls: false
+rabbitmq_tls_port: 5671
+rabbitmq_tls_verify: verify_none
+rabbitmq_fail_if_no_peer_cert: false
+rabbitmq_disable_non_tls: true
+rabbitmq_mgmt_nontls_localhost_only: true
+rabbitmq_mgmt_ssl_port: 15671
+rabbitmq_generate_self_signed_cert: false
+rabbitmq_self_signed_crt_path: /etc/pki/tls/certs
+rabbitmq_self_signed_csr_path: /etc/pki/tls/certs
+rabbitmq_self_signed_priv_path: /etc/pki/tls/private
+rabbitmq_self_signed_basename: rabbitmq_selfsigned
+rabbitmq_self_signed_crt: "{{ rabbitmq_self_signed_crt_path }}/{{ rabbitmq_self_signed_basename }}.crt"
+rabbitmq_self_signed_csr: "{{ rabbitmq_self_signed_csr_path }}/{{ rabbitmq_self_signed_basename }}.csr"
+rabbitmq_self_signed_priv: "{{ rabbitmq_self_signed_priv_path }}/{{ rabbitmq_self_signed_basename }}.pem"
+rabbitmq_self_signed_cabundle: /etc/pki/tls/certs/ca-bundle.crt
