--- a/molecule/tls_cluster_byo_cert/playbook.yml
+++ b/molecule/tls_cluster_byo_cert/playbook.yml
@@ -4,6 +4,8 @@
   vars:
     rabbitmq_group: all
     rabbitmq_enable_tls: true
-    rabbitmq_generate_self_signed_cert: true
+    rabbitmq_tls_use_custom_cert: true
+    rabbitmq_tls_custom_cert_filename: cert.pem
+    rabbitmq_tls_custom_priv_filename: key.pem
   roles:
     - role: ansible-role-rabbitmq-cluster
