--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,13 @@
 rabbitmq_group: rabbitmq
-rabbitmq_plugins:
+rabbitmq_plugins: []
+rabbitmq_plugins_enable_management: false
+rabbitmq_plugins_enable_tls_cert_auth: false
+rabbitmq_plugins_default:
     - rabbitmq_stomp
-    # - rabbitmq_management
+rabbitmq_plugins_management:
+    - rabbitmq_management
+rabbitmq_plugins_tls_cert_auth:
+    - rabbitmq_auth_mechanism_ssl
 rabbitmq_vhost_name: defaultvhost
 rabbitmq_mgmt_user: adminuser
 rabbitmq_mgmt_password: adminpass
@@ -14,6 +20,7 @@ rabbitmq_centos_package: "rabbitmq-server-3.7*"
 rabbitmq_tls_enable: false
 rabbitmq_tls_port: 5671
 rabbitmq_tls_verify: verify_none
+rabbitmq_tls_verify_cluster: verify_none
 rabbitmq_tls_fail_if_no_peer_cert: true
 rabbitmq_tls_disable_non_tls: true
 rabbitmq_tls_mgmt_nontls_localhost_only: true
@@ -35,3 +42,4 @@ rabbitmq_tls_custom_priv_filename: ""
 rabbitmq_tls_cabundle: ""
 rabbitmq_tls_cert: ""
 rabbitmq_tls_private_key: ""
+rabbitmq_tls_client_cert_only: false
