--- a/molecule/tls_cluster_byo_cert/molecule.yml
+++ b/molecule/tls_cluster_byo_cert/molecule.yml
@@ -15,6 +15,10 @@ platforms:
       - /tmp
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /Users/ncelebic/PycharmProjects/tls_gen:/tls_gen:rw
+    published_ports:
+      - 0.0.0.0:33331:15671/tcp
+      - 0.0.0.0:33333:5671/tcp
     networks:
       - name: tls
   - name: rabbit_tls2
