--- a/tasks/rabbitmq_queue_policy.yml
+++ b/tasks/rabbitmq_queue_policy.yml
@@ -5,9 +5,10 @@
       pattern: 'morpheusAgentActions.*'
       vhost: '{{ rabbitmq_vhost_name }}'
       apply_to: 'queues'
-      priority: '1'
+      priority: '2'
       tags:
           expires: 1800000
+          ha-mode: all
       state: present
 
 - name: RabbitMQ | setting morpheusAgentActions queue policies
@@ -16,9 +17,10 @@
       pattern: 'statCommands.*'
       vhost: '{{ rabbitmq_vhost_name }}'
       apply_to: 'queues'
-      priority: '1'
+      priority: '2'
       tags:
           expires: 1800000
+          ha-mode: all
       state: present
 
 - name: RabbitMQ | setting monitorJobs queue policies
@@ -27,7 +29,8 @@
       pattern: 'monitorJobs.*'
       vhost: '{{ rabbitmq_vhost_name }}'
       apply_to: 'queues'
-      priority: '1'
+      priority: '2'
       tags:
           expires: 1800000
+          ha-mode: all
       state: present
