adding internal IP switch

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,7 @@ rabbitmq_user: rabbitmquser
 rabbitmq_password: rabbitmqpassword
 rabbitmq_linux_user: rabbitmq
 rabbitmq_centos_package: "rabbitmq-server-3.8*"
+rabbitmq_use_internal_ip: false
 
 # TLS Variables
 rabbitmq_tls_enable: false
