--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,8 @@ rabbitmq_plugins_management:
     - rabbitmq_management
 rabbitmq_plugins_tls_cert_auth:
     - rabbitmq_auth_mechanism_ssl
+rabbitmq_plugins_ec2_discovery:
+    - rabbitmq_peer_discovery_aws
 rabbitmq_vhost_name: defaultvhost
 rabbitmq_mgmt_user: adminuser
 rabbitmq_mgmt_password: adminpass
@@ -16,6 +18,13 @@ rabbitmq_password: rabbitmqpassword
 rabbitmq_linux_user: rabbitmq
 rabbitmq_centos_package: "rabbitmq-server-3.8*"
 rabbitmq_use_internal_ip: false
+rabbitmq_clustering_type: static
+rabbitmq_discovery_ec2_autoscaling_group: false
+rabbitmq_discovery_ec2_tags: false
+rabbitmq_discovery_ec2_region: us-east-1
+rabbitmq_discovery_ec2_instance_tags: {}
+rabbitmq_discovery_ec2_access_key: ""
+rabbitmq_discovery_ec2_secret: ""
 
 # TLS Variables
 rabbitmq_tls_enable: false
